fix: HowToPlay image alignment

--- a/src/legends/modules/landing/components/HowToPlay/HowToPlay.module.scss
+++ b/src/legends/modules/landing/components/HowToPlay/HowToPlay.module.scss
@@ -22,6 +22,13 @@
       display: flex;
       flex-direction: column;
 
+      &:last-child {
+        .stepImage {
+          margin-top: 1.5rem;
+          margin-bottom: 1rem;
+        }
+      }
+
       .stepImage {
         width: 20rem;
         height: 15rem;
@@ -72,6 +79,13 @@
       gap: 5rem;
 
       .step {
+        &:last-child {
+          .stepImage {
+            margin-top: 0;
+            margin-bottom: 1rem;
+          }
+        }
+
         .stepImage {
           width: 100%;
           height: auto;
